--- a/SAO-EP/Src/Exclude Date%2fs.fx.yaml
+++ b/SAO-EP/Src/Exclude Date%2fs.fx.yaml
@@ -3,269 +3,34 @@
     HP_TSKBR_3 As TSKBR:
         NavigationItems: =gblNavItems
 
-    Container15 As groupContainer.manualLayoutContainer:
-        Height: =662
-        Width: =527
-        X: =19
-        Y: =89
+    Container15 As groupContainer.verticalAutoLayoutContainer:
+        DropShadow: =DropShadow.Semilight
+        Height: |
+            =640
+        LayoutDirection: =LayoutDirection.Vertical
+        LayoutMode: =LayoutMode.Auto
+        RadiusBottomLeft: =10
+        RadiusBottomRight: =10
+        RadiusTopLeft: =10
+        RadiusTopRight: =10
+        Width: =627
+        X: =35
+        Y: =83
         ZIndex: =2
 
-        TextCanvas15 As Text:
-            DisplayMode: =DisplayMode.Edit
-            Height: =58
-            Text: ="INSERT CALENDAR HERE (Container)"
-            Width: =249
-            X: =136
-            Y: =16
-            ZIndex: =1
-
-        Form1 As form.PowerApps_CoreControls_Form:
-            DataSource: =BlockedDates
-            Height: =230
-            NumberOfColumns: =1
-            SnapToColumns: =false
-            UseFluentV9Cards: =true
-            Width: =527
-            Y: =80
-            ZIndex: =2
-
-            Reason_DataCard1 As typedDataCard.fluentV9TextualEditCard:
-                BorderStyle: =BorderStyle.Solid
-                DataField: ="Reason"
-                Default: =ThisItem.Reason
-                DisplayMode: =Parent.DisplayMode
-                DisplayName: =DataSourceInfo([@BlockedDates],DataSourceInfo.DisplayName,'Reason')
-                Fill: =RGBA(0, 0, 0, 0)
-                Height: =70
-                MaxLength: =DataSourceInfo([@BlockedDates], DataSourceInfo.MaxLength, 'Reason')
-                Required: =true
-                Update: =DataCardValue36.Value
-                Width: =175
-                X: =0
-                Y: =0
-                ZIndex: =3
-
-                DataCardKey53 As Text:
-                    DisplayMode: =DisplayMode.Edit
-                    Height: =22
-                    Text: =Parent.DisplayName
-                    Weight: ='TextCanvas.Weight'.Semibold
-                    Width: =Parent.Width - 48
-                    Wrap: =false
-                    X: =24
-                    Y: =10
-                    ZIndex: =1
-
-                "DataCardValue36 As 'Text input'":
-                    AccessibleLabel: =Parent.DisplayName
-                    DisplayMode: =Parent.DisplayMode
-                    Height: =32
-                    Mode: ="'TextInputCanvas.Mode'.TextInputModeSingleLine"
-                    Required: =Parent.Required
-                    ValidationState: =If(IsBlank(Parent.Error), "None", "Error")
-                    Value: =Parent.Default
-                    Width: =Parent.Width - 48
-                    X: =24
-                    Y: =DataCardKey53.Y + DataCardKey53.Height + 4
-                    ZIndex: =2
-
-                ErrorMessage53 As Text:
-                    DisplayMode: =DisplayMode.Edit
-                    Height: =30
-                    Text: =Parent.Error
-                    Visible: =And(!IsBlank(Parent.Error), Parent.DisplayMode=DisplayMode.Edit)
-                    Width: =Parent.Width - 48
-                    Wrap: =true
-                    X: =24
-                    Y: =DataCardValue36.Y + DataCardValue36.Height
-                    ZIndex: =3
-
-                StarVisible23 As Text:
-                    Align: ='TextCanvas.Align'.Center
-                    DisplayMode: =DisplayMode.Edit
-                    Height: =30
-                    Text: ="*"
-                    Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                    Width: =30
-                    X: =0
-                    Y: =DataCardKey53.Y
-                    ZIndex: =4
-
-            Date_DataCard1 As typedDataCard.fluentV9DateEditCard:
-                BorderStyle: =BorderStyle.Solid
-                DataField: ="Date"
-                Default: =ThisItem.Date
-                DisplayMode: =Parent.DisplayMode
-                DisplayName: =DataSourceInfo([@BlockedDates],DataSourceInfo.DisplayName,'Date')
-                Fill: =RGBA(0, 0, 0, 0)
-                Height: =70
-                Required: =false
-                Update: =DataCardValue37.SelectedDate
-                Width: =175
-                X: =1
-                Y: =0
-                ZIndex: =3
-
-                DataCardKey54 As Text:
-                    DisplayMode: =DisplayMode.Edit
-                    Height: =22
-                    Text: =Parent.DisplayName
-                    Weight: ='TextCanvas.Weight'.Semibold
-                    Width: =Parent.Width - 48
-                    Wrap: =false
-                    X: =24
-                    Y: =10
-                    ZIndex: =1
-
-                "DataCardValue37 As 'Date picker'":
-                    AccessibleLabel: =Parent.DisplayName
-                    DisplayMode: =Parent.DisplayMode
-                    EndDate: =Date(Year(Today())+100, 12, 31)
-                    Height: =32
-                    Required: =Parent.Required
-                    SelectedDate: =Parent.Default
-                    StartDate: =Date(1900, 1, 1)
-                    ValidationState: =If(IsBlank(Parent.Error), "None", "Error")
-                    Width: =Parent.Width - 48
-                    X: =24
-                    Y: =DataCardKey54.Y + DataCardKey54.Height + 4
-                    ZIndex: =2
-
-                ErrorMessage54 As Text:
-                    DisplayMode: =DisplayMode.Edit
-                    Height: =30
-                    Text: =Parent.Error
-                    Visible: =And(!IsBlank(Parent.Error), Parent.DisplayMode=DisplayMode.Edit)
-                    Width: =Parent.Width - 48
-                    Wrap: =true
-                    X: =24
-                    Y: =DataCardValue37.Y + DataCardValue37.Height
-                    ZIndex: =3
-
-                StarVisible24 As Text:
-                    Align: ='TextCanvas.Align'.Center
-                    DisplayMode: =DisplayMode.Edit
-                    Height: =30
-                    Text: ="*"
-                    Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                    Width: =30
-                    X: =0
-                    Y: =DataCardKey54.Y
-                    ZIndex: =4
-
-        ButtonCanvas11 As Button:
-            DisplayMode: =DisplayMode.Edit
-            Height: =32
-            OnSelect: =SubmitForm(Form1);
-            Width: =96
-            X: =396
-            Y: =112
-            ZIndex: =3
-
-    "Gallery1 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
-        DelayItemLoading: =true
-        Height: =406
-        Items: =CalendarItems
-        Layout: =Layout.Vertical
-        LoadingSpinner: =LoadingSpinner.Data
-        TemplatePadding: =0
-        TemplateSize: =104
-        Width: =774
-        X: =577
-        Y: =212
+    Container15_1 As groupContainer.verticalAutoLayoutContainer:
+        DropShadow: =DropShadow.Semilight
+        Height: =640
+        LayoutDirection: =LayoutDirection.Vertical
+        LayoutMode: =LayoutMode.Auto
+        RadiusBottomLeft: =10
+        RadiusBottomRight: =10
+        RadiusTopLeft: =10
+        RadiusTopRight: =10
+        Width: =627
+        X: =696
+        Y: =83
         ZIndex: =3
 
-        Image10 As image:
-            Height: =72
-            OnSelect: =Select(Parent)
-            RadiusBottomLeft: =8
-            RadiusBottomRight: =8
-            RadiusTopLeft: =8
-            RadiusTopRight: =8
-            Width: =72
-            X: =16
-            Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
-            ZIndex: =1
-
-        Title4 As label:
-            BorderColor: =RGBA(0, 0, 0, 1)
-            Color: =RGBA(71, 69, 64, 1)
-            DisabledColor: =RGBA(186, 186, 186, 1)
-            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-            Height: =Self.Size * 1.8
-            OnSelect: =Select(Parent)
-            PaddingBottom: =0
-            PaddingLeft: =0
-            PaddingRight: =0
-            PaddingTop: =0
-            Size: =14
-            Text: =ThisItem.Venue
-            VerticalAlign: =VerticalAlign.Top
-            Width: =Parent.TemplateWidth - 173
-            X: =99
-            Y: =27
-            ZIndex: =2
-
-        Subtitle2 As label:
-            BorderColor: =RGBA(0, 0, 0, 1)
-            Color: =RGBA(71, 69, 64, 1)
-            DisabledColor: =RGBA(186, 186, 186, 1)
-            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-            Height: =Self.Size * 1.8
-            OnSelect: =Select(Parent)
-            PaddingBottom: =0
-            PaddingLeft: =0
-            PaddingRight: =0
-            PaddingTop: =0
-            Text: |-
-                =ThisItem.'APF_ID: Target Date'.Value
-            VerticalAlign: =VerticalAlign.Top
-            Width: =Title4.Width
-            X: =Title4.X
-            Y: =Title4.Y + Title4.Height
-            ZIndex: =3
-
-        NextArrow2 As icon.ChevronRight:
-            AccessibleLabel: =Self.Tooltip
-            BorderColor: =RGBA(0, 0, 0, 1)
-            Color: =RGBA(166, 166, 166, 1)
-            DisabledBorderColor: =RGBA(56, 56, 56, 1)
-            DisabledColor: =RGBA(119, 119, 119, 1)
-            Height: =50
-            Icon: =Icon.ChevronRight
-            OnSelect: =Select(Parent)
-            PaddingBottom: =16
-            PaddingLeft: =16
-            PaddingRight: =16
-            PaddingTop: =16
-            Tooltip: ="View item details"
-            Width: =50
-            X: =Parent.TemplateWidth - Self.Width - 12
-            Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
-            ZIndex: =4
-
-        Separator2 As rectangle:
-            BorderColor: =RGBA(0, 0, 255, 1)
-            Fill: =RGBA(255, 255, 255, 1)
-            Height: =8
-            OnSelect: =Select(Parent)
-            Width: =Parent.TemplateWidth
-            Y: =Parent.TemplateHeight - Self.Height
-            ZIndex: =5
-
-        Rectangle10 As rectangle:
-            Height: =Parent.TemplateHeight - Separator2.Height
-            OnSelect: =Select(Parent)
-            Visible: =ThisItem.IsSelected
-            Width: =4
-            ZIndex: =6
-
-    TextCanvas16 As Text:
-        DisplayMode: =DisplayMode.Edit
-        Height: =43
-        Text: ="Blank space for blocking calendar"
-        Width: =156
-        X: =608
-        Y: =89
-        ZIndex: =4
+        CalendarComponent_Mini_1 As CalendarComponent_Mini:
 
