--- a/SAO-EP/Src/Exclude Date%2fs.fx.yaml
+++ b/SAO-EP/Src/Exclude Date%2fs.fx.yaml
@@ -32,7 +32,7 @@
             LayoutMinWidth: =96
             Size: =25
             Text: ="Add Dates to Block"
-            VerticalAlign: ='TextCanvas.VerticalAlign'.Bottom
+            VerticalAlign: ='TextCanvas.VerticalAlign'.Middle
             Weight: ='TextCanvas.Weight'.Bold
             Width: =Parent.Width
             Wrap: =false
@@ -304,7 +304,7 @@
             LayoutMode: =LayoutMode.Auto
             PaddingLeft: =10
             Width: |
-                =Parent.Width-60
+                =Parent.Width-20
             ZIndex: =6
 
             SearchInput1_1 As text:
@@ -330,54 +330,6 @@
                 PaddingTop: =10
                 Width: =44
                 ZIndex: =9
-
-        NewRecordButtonBarContainer1 As groupContainer.horizontalAutoLayoutContainer:
-            AlignInContainer: =AlignInContainer.Center
-            FillPortions: =0
-            Height: =44
-            LayoutMinHeight: =100
-            LayoutMinWidth: =250
-            LayoutMode: =LayoutMode.Auto
-            Width: =Parent.Width-60
-            ZIndex: =7
-
-            NewRecordAddIcon1 As icon:
-                BorderColor: =RGBA(0, 0, 0, 0)
-                Color: =RGBA(0, 120, 212, 1)
-                DisabledBorderColor: =RGBA(245, 245, 245, 1)
-                DisabledColor: =RGBA(225, 223, 221, 1)
-                DisabledFill: =RGBA(0, 0, 0, 0)
-                FocusedBorderThickness: =4
-                Height: =44
-                HoverBorderColor: =RGBA(0, 0, 0, 0)
-                HoverColor: =RGBA(16, 110, 190, 1)
-                HoverFill: =RGBA(0, 0, 0, 0)
-                Icon: =Icon.Add
-                OnSelect: |-
-                    =NewForm(DateBlockerForm); UpdateContext({ newMode: true });
-                PaddingBottom: =10
-                PaddingLeft: =10
-                PaddingRight: =10
-                PaddingTop: =10
-                PressedBorderColor: =RGBA(0, 0, 0, 0)
-                PressedColor: =RGBA(16, 110, 190, 1)
-                PressedFill: =RGBA(0, 0, 0, 0)
-                Width: =44
-                ZIndex: =11
-
-            NewRecordLabel1 As label:
-                BorderColor: =RGBA(0, 0, 0, 0)
-                BorderStyle: =BorderStyle.None
-                BorderThickness: =2
-                Color: =RGBA(50, 49, 48, 1)
-                DisabledBorderColor: =RGBA(0, 0, 0, 0)
-                DisabledColor: =RGBA(161, 159, 157, 1)
-                FillPortions: =1
-                FocusedBorderThickness: =4
-                Font: =Font.'Segoe UI'
-                Height: =44
-                Text: ="New"
-                ZIndex: =12
 
         RecordsListSeparator1_1 As rectangle:
             AlignInContainer: =AlignInContainer.Stretch
