--- a/SAO-EP/Src/Exclude Date%2fs.fx.yaml
+++ b/SAO-EP/Src/Exclude Date%2fs.fx.yaml
@@ -361,6 +361,8 @@
             Height: =Parent.Height
             Items: =Search([@BlockedDates], SearchInput1_1.Text, Reason)
             Layout: =Layout.Vertical
+            LayoutMinHeight: =287
+            LayoutMinWidth: =320
             LoadingSpinner: =LoadingSpinner.Data
             OnSelect: |-
                 =UpdateContext({ itemSelected: true, CurrentItem: ThisItem })
@@ -372,6 +374,9 @@
             ZIndex: =10
 
             Title7 As label:
+                BorderColor: =RGBA(0, 0, 0, 1)
+                Color: =RGBA(71, 69, 64, 1)
+                DisabledColor: =RGBA(186, 186, 186, 1)
                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                 Height: =26
                 OnSelect: =Select(Parent)
@@ -379,6 +384,7 @@
                 PaddingLeft: =0
                 PaddingRight: =0
                 PaddingTop: =0
+                Size: =14
                 Text: =ThisItem.Reason
                 VerticalAlign: =VerticalAlign.Top
                 Width: =305
@@ -387,6 +393,9 @@
                 ZIndex: =1
 
             Subtitle5 As label:
+                BorderColor: =RGBA(0, 0, 0, 1)
+                Color: =RGBA(71, 69, 64, 1)
+                DisabledColor: =RGBA(186, 186, 186, 1)
                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                 Height: =Self.Size * 1.8
                 OnSelect: =Select(Parent)
@@ -402,6 +411,7 @@
                 ZIndex: =2
 
             Separator5 As rectangle:
+                BorderColor: =RGBA(0, 0, 255, 1)
                 Fill: =RGBA(255, 255, 255, 1)
                 Height: =8
                 OnSelect: =Select(Parent)
