--- a/SAO-EP/Src/APF_Approvals.fx.yaml
+++ b/SAO-EP/Src/APF_Approvals.fx.yaml
@@ -846,7 +846,7 @@
                     Height: =32
                     LayoutMinHeight: =32
                     LayoutMinWidth: =96
-                    OnSelect: |-
+                    OnSelect: |
                         =Set(openApprovalScreen, false);
                         ChangeApprovalStatus.Run(CurrentAPF_ID, CurrentUser.userRoles.Id, DropdownCanvas1.Selected.Value, CurrentAPFOrgAdviser.userEmail, CurrentSAOHead.userEmail, {text_1:TextInputCanvas1.Value});
                     PaddingTop: =
